--- a/.github/workflows/repo-dispatcher.yml
+++ b/.github/workflows/repo-dispatcher.yml
@@ -12,8 +12,8 @@ on:
   # push: 
   #   branches:
   #     - master
-  # schedule:
-  #   - cron: 30 13 * * 6
+  schedule:
+    - cron: 0 */18 * * *
   workflow_dispatch:
     inputs:
       ssh:
